topMenu near finish

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,5 +1,5 @@
 //primary color------------------------------
-$primaryColor: #00897b  ;
+$primaryColor: #283593    ;
 //dark color------------------------------
 $darkColor: #2d2d31 ; 
 $darkBlue: #4a4e60 ;
@@ -15,7 +15,7 @@ $bodyColor: darken($whiteColor1,5%) ;
 //back-ground color--------------------------------------
 $bgColor: white ;
 //text color------------------------------
-$textWhite: $whiteColor2;
+$textWhite: white;
 $textDark: $darkColor;
 $textGrey: $greyColor ;
 //blue color------------------------------
