search and top menu

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -10,6 +10,7 @@ $greyColor: rgb(144, 144, 155) ;
 $whiteColor1: rgb(245,245,245) ;
 $whiteColor2: rgb(251,251,251) ;
 $paleColor: rgb(244, 243, 247) ;
+$iceColor: #eceff1 ;
 //body color-----------------------------------
 $bodyColor: darken($whiteColor1,5%) ;
 //back-ground color--------------------------------------
