--- a/src/framework.scss
+++ b/src/framework.scss
@@ -13,8 +13,8 @@
 .containerStyle{
     width: 90% ;
     height: auto;
-    margin: $dist3 auto 0 auto ;
-    padding: $dist2  ;
+    margin: $sectionsDist auto 0 auto ;
+    // padding: $dist2  ;
     // background-color: $bgColor ;
     // box-shadow: 0 0 1em .01em $shadowColor ;
     // border-radius: $dist2 ;
