--- a/src/index/styles/carousel.scss
+++ b/src/index/styles/carousel.scss
@@ -12,6 +12,7 @@
                 margin: $dist1;
                 box-shadow: 0 .2em .5em .1em $shadowColor;
                 overflow: hidden;
+                background-color: white;
                 &:hover{
                     .img{
                         img{
