--- a/src/utilities/styles/form.scss
+++ b/src/utilities/styles/form.scss
@@ -772,7 +772,7 @@ form {
                 }
 
                 p {
-                    max-width: calc(100% - .5em - 1.2em - .5em);
+                    width: auto;
                     font-size: $fontM;
                     color: darken($textGrey, 15%);
                     margin-right: .3em;
