--- a/src/colors.scss
+++ b/src/colors.scss
@@ -23,7 +23,7 @@ $textGrey: $greyColor ;
 $blueColor1 : #007FE8 ;
 $blueColor2 : #003DBB ;
 //green color------------------------------
-$greenColor1: #00BC9A ;
+$greenColor: #00BC9A ;
 //teal color------------------------------
 $tealColor: #80cbc4 ;
 //red color------------------------------
