--- a/src/utilities/styles/form.scss
+++ b/src/utilities/styles/form.scss
@@ -13,6 +13,13 @@ form {
     }
     .inputWrapper.text {
         position: relative;
+        .moreInfo{
+            position: absolute;
+            top: 105%;
+            right: .2em;
+            color: lighten($textGrey,15%);
+            font-size: $fontS;
+        }
         input {
             width: 100%;
             height: 100%;
@@ -197,13 +204,12 @@ form {
         input.style1 {
             border: none;
             border-bottom: 1.2px solid lighten($textGrey, 25%);
-
             &:focus {
                 ~label {
                     font-size: 8px;
                     color: $primaryColor;
                     right: 0;
-                    bottom: calc(100% + .5em);
+                    bottom: calc(100% + 1em);
                 }
 
                 ~.arrow {
@@ -313,7 +319,7 @@ form {
             ~label.top {
                 font-size: 8px;
                 right: 0;
-                bottom: calc(100% + .5em);
+                bottom: calc(100% + 1em);
             }
         }
         input.style2 {
