--- a/src/agents/styles/agents.scss
+++ b/src/agents/styles/agents.scss
@@ -21,7 +21,7 @@
         @include flex(column,flex-start,flex-start,nowrap,"") ;
         overflow: auto;
         thead,tbody{
-            width: 100%;
+            min-width: 100%;
             height: auto;
             display: flex;
             @include flex(column,flex-start,flex-start,nowrap,"") ;
