--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,7 +1,7 @@
 //primary color------------------------------
 $primaryColor: #283593    ;
 //dark color------------------------------
-$darkColor: #2d2d31 ; 
+$darkColor: #2b2b30 ; 
 $darkBlue: #4a4e60 ;
 $darkColor2: #3e3f43 ;
 //grey color----------------------------------
