--- a/src/utilities/styles/sliderMove.scss
+++ b/src/utilities/styles/sliderMove.scss
@@ -63,12 +63,10 @@
             flex-shrink: 0 ;
             width: 100% ;
             height: 100%;
-            a,img{
+            img{
                 width: 100% ;
                 height: 100%;
-            }
-            img{
-
+                object-fit: cover;
             }
         }
     }
