--- a/src/utilities/styles/timeline.scss
+++ b/src/utilities/styles/timeline.scss
@@ -170,7 +170,7 @@
         color: $textGrey;
     }
 }
-p{color: red;}
+p{color: blue;}
 // @include resizeTablet(#timelineWrapper) ;
 // @include resizeMobile(#timelineWrapper) ;
 // @include mediaQ(500px){
